<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="webersolutions.sos.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/Name"
        android:textSize="40sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAge"
        android:id="@+id/txtAge"
        android:textSize="25sp"
        android:layout_below="@+id/Name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtGender"
        android:id="@+id/txtGender"
        android:textSize="25sp"
        android:layout_below="@+id/txtAge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAllergyTitle"
        android:id="@+id/txtAllergyTitle"
        android:textSize="30sp"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:layout_below="@+id/txtGender"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAllergy1"
        android:id="@+id/txtAllergy1"
        android:textSize="25sp"
        android:layout_below="@+id/txtAllergyTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMedsTitle"
        android:id="@+id/txtMedsTitle"
        android:textSize="30sp"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:layout_below="@+id/txtAllergy1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMed1"
        android:id="@+id/txtMed1"
        android:textSize="25sp"
        android:layout_below="@+id/txtMedsTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMed2"
        android:id="@+id/txtMed2"
        android:layout_below="@+id/txtMed1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp"
        android:layout_marginLeft="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtInsTitle"
        android:id="@+id/txtInsTitle"
        android:textSize="30sp"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:layout_below="@+id/txtMed2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_marginTop="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtInsName"
        android:id="@+id/txtInsName"
        android:layout_below="@+id/txtInsTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp"
        android:layout_marginLeft="10sp" />
</RelativeLayout>
